@@ -5,6 +5,7 @@ _mosquitto_client_id
 _mosquitto_client_keepalive
 _mosquitto_client_certificate
 _mosquitto_client_protocol
+_mosquitto_client_protocol_version
 _mosquitto_client_sub_count
 _mosquitto_client_username
 _mosquitto_set_username
