@@ -5,6 +5,7 @@
 	mosquitto_client_id;
 	mosquitto_client_keepalive;
 	mosquitto_client_protocol;
+	mosquitto_client_protocol_version;
 	mosquitto_client_sub_count;
 	mosquitto_client_username;
 	mosquitto_log_printf;
